clusters/9ka/downloaders/bazarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/component: movies
    app.kubernetes.io/part-of: downloaders
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
      app.kubernetes.io/component: movies
      app.kubernetes.io/part-of: downloaders
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
        app.kubernetes.io/component: movies
        app.kubernetes.io/part-of: downloaders
    spec:
      securityContext:
        # runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: bazarr
        image: ghcr.io/linuxserver/bazarr:1.6.1
        ports:
        - name: http
          containerPort: 6767
          protocol: TCP
        startupProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 1
          failureThreshold: 30
        livenessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            port: http
            path: /
          periodSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - mountPath: /series
          name: series
        - mountPath: /movies
          name: movies
        - mountPath: /config
          name: config
        # - mountPath: /run
        #   name: run
        resources:
          limits:
            cpu: "1"
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - ALL
            add:
            - CHOWN
            - SETUID
            - SETGID
            - FOWNER
            - DAC_OVERRIDE
            - NET_BIND_SERVICE
          # readOnlyRootFilesystem: true
          # runAsUser: 1000
          # runAsGroup: 1000
          # runAsNonRoot: true
      volumes:
      - name: series
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/series
      - name: movies
        nfs:
          server: helium.svc.efgh.nl
          path: /rusty/data/movies
      # - name: run
      #   emptyDir:
      #     sizeLimit: 1Gi
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: proxmox-zfs-nvme
      volumeMode: Filesystem
