clusters/9ka/downloaders/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/component: movies
    app.kubernetes.io/part-of: downloaders
spec:
  selector:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/component: movies
    app.kubernetes.io/part-of: downloaders
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
